Fixed Subscribe Blog Alignment issue
Fixed Subscribe Blog text filed and button alignment issue

--- a/css/css.css
+++ b/css/css.css
@@ -25,11 +25,11 @@ header .container {
 }
 .logo {
   float: left;
-  margin: 7px 0 5px 0;
+  margin: 0.438em 0 0.313em 0;
   display: inline-block;
 }
 .logo img {
-  height: 40px;
+  height: 2.500em;
   width: auto;
 }
 .nav {
@@ -267,9 +267,27 @@ img {
   padding-left:4px;
 }
 
+
+/* Author*/
+
+.blog-post-meta{
+  margin: 0 0 10px;
+  font-size:0.750em;
+  line-height: 0;
+}
+
+/* Author*/
+
+/*Post*/
+.blog-post-post{
+  padding-top: 15px;
+}
+/*Post*/
+
 .subscribeblog{
   padding-left: 35px;
   padding-top: 20px;
+  padding-bottom: 30px;
   background-color: #d2e8fa;
   border-radius: 2px; 
   font-size: .7em;
@@ -281,26 +299,26 @@ img {
 .subscribe-inset ol:last-child {
   margin-bottom: 0;
 }
-
+  
 /*Text Area*/
 
 .form-control {
-margin-top:10px;  
-display: block;
-width: 75%;
-height: 50px;
-padding: 6px 12px;
-font-size: 14px;
-line-height: 1.42857143;
-color: #555;
-background-color: #fff;
-background-image: none;
-border: 1px solid #ccc;
-border-radius: 2px;
--webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
--webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  margin-top:10px;  
+  display: inline;
+  width: 75%;
+  height: 50px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 body {padding:20px;}
@@ -319,8 +337,6 @@ body {padding:20px;}
   border-radius: 2px;
   height: 50px;
   width: 20%;
-  margin-top: 10px;
-  margin-bottom: 25px;
 }
 .btn-custom:hover,
 .btn-custom:focus,
